...
    Column(
        modifier = Modifier
            .verticalScroll(rememberScrollState())
            .padding(start = 24.dp, end = 24.dp, bottom = 24.dp)
    ) {
        Text(
            text = "URL Validation",
            style = MaterialTheme.typography.h6,
            modifier = Modifier
                .padding(top = 24.dp, bottom = 8.dp)
                .testTag("URL Validation Header")
        )

...
    onUrlValidationBindPasskeyUrlTextChange: (String) -> Unit,
    onValidateBindPasskeyUrl: () -> Unit,
    onUrlValidationAuthenticateUrlTextChange: (String) -> Unit,
    onValidateAuthenticateUrl: () -> Unit
) {
    Text(
        text = "Bind Passkey URL",
        style = MaterialTheme.typography.subtitle1,
        modifier = Modifier.padding(top = 32.dp)
    )

    InteractionResponseInputView(
        description = "Paste a Url here to validate if it's a bind passkey url.",
...
